Added ban/unban and deleted_at attributes to user model, did some ajax styling to admin user show page

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,7 +19,7 @@
       <tr id="admin_user_<%= user.id %>">
         <td><%= gravatar_image_tag user.email, gravatar: 
               { default: :monsterid } %></td>
-        <td><%= link_to user.name, user %></td>
+        <td><%= link_to user.name, admin_user_path(user) %></td>
         <td><%= user.email %></td>
         <td><%= user.about_me %></td>
         <td>
