--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,6 @@
   <dd><%= gravatar_image_tag @user.email, gravatar: { default: :monsterid} %></dd>
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @user.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
-  <dd><%= @user.email %></dd>
   <dt><strong><%= model_class.human_attribute_name(:about_me) %>:</strong></dt>
   <dd><%= @user.about_me %></dd>
 </dl>
@@ -20,11 +18,8 @@
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               users_path, :class => 'btn'  %>
+  <% if signed_in? && current_user == @user %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_user_path(@user), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              user_path(@user),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+  <% end %>            
 </div>
