Added admin/idioms controller and a few views

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -4,6 +4,6 @@
 
 <ul id="admin_links">
   <li><%= link_to "Manage Users", admin_users_path %></li>
-  <li><%= link_to "Manage Idioms", '#' %></li>
+  <li><%= link_to "Manage Idioms", admin_idioms_path %></li>
   <li><%= link_to "Manage Comments", '#' %></li>
 </ul>
