--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -25,7 +25,7 @@
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_admin_user_path(user), :class => 'btn btn-mini' %>
-          <%= link_to "Delete #{user.name}", admin_user_path(user), method: :delete, 
+          <%= link_to "Delete #{user.name}", soft_delete_admin_user_path(user), method: :put, 
             confirm: "Are you sure?", class: "btn-mini btn btn-danger", 
             id: "delete_user_#{user.id}", remote: true %>            
         </td>
