--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= render 'layouts/nav_links' %>
 
     <div class="container">
+      <%= render 'shared/display_announcements' %>
       <%= render 'shared/display_flash' %>
         <div class="row">
           <div class="span9">
