--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -42,7 +42,7 @@
 
 <h1><%= @idiom.title %></h1> 
 <%= link_to "Edits history", idiom_edits_path(@idiom) %><br>
-<p><%= @idiom.description %></p>
+<p><%= raw @idiom.description %></p>
 
 <span>Tags: <%= render @idiom.tags %></span><br>
 
