--- a/app/views/idioms/new.html.erb
+++ b/app/views/idioms/new.html.erb
@@ -4,7 +4,8 @@
 
 <%= simple_form_for @idiom do |f| %>
   <%= f.input :title %>
-  <%= f.input :description %>
+<textarea class="text required redactor" cols="40" rows="120" id="idiom_description" name="idiom[description]" rows="20">
+</textarea>
   <%= f.label :tag_list, "Tags, separated by commas" %>
   <%= f.input :tag_list, label: false,  as: :string %>
   <%= f.button :submit %>
