--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -39,6 +39,17 @@
      <% end %>
     </span>
   <% end %>  
+  
+  <div id="abuse">
+    Do you see any abuse? <%= link_to "REPORT IT", '#', id: "report_abuse" %>
+  <% if signed_in? %>
+    <%= simple_form_for [@idiom, @report], id: "report_form", remote: true do |f| %>
+      <%= f.label :message, "Please briefly describe the problem." %>
+      <%= f.input :message %>
+      <%= f.button :submit, "Report" %>
+    <% end %>
+  <% end %>
+  </div>
 <% end %>
 
 <h1><%= @idiom.title %></h1> 
