Various UI tweaks and some bug fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,4 +58,17 @@ textarea {
   min-height: 400px;
 }
 
+.span5 {
+  border: 2px solid #CEF2E0;
+  padding: 2px;
+  margin-right: 3px;
+  min-height: 400px;
 
+}
+
+.span4 {
+  border: 2px solid #cedff2;
+  padding: 2px;
+  margin-left: 2px;
+  min-height: 400px;
+}
