--- a/app/views/edits/_edit.html.erb
+++ b/app/views/edits/_edit.html.erb
@@ -1,4 +1,4 @@
-<% vote= edit.new_or_find_vote(current_user.id) %>
+<% vote = edit.new_or_find_vote(current_user.id) %>
 <li>
   <p><%= truncate sanitize(raw(edit.description)), length: 500 %>
     <small><%= link_to edit.user.name, edit.user %>
@@ -11,7 +11,9 @@
       	method: vote.new_record? ? :post : :put, 
       	id: "edit_downvote_#{edit.id}", remote: true %>
       <span id="edit_<%= edit.id %>_score" class=<%= edit.total_score >= 0 ? "positive" : "negative" %>>
-      	<%= edit.total_score %>
+      	<%= edit.total_score %> | 
+        <%= link_to "Report Abuse", [object, edit, edit.reports.new], method: :post,
+          id: "report_edit_#{edit.id}", remote: true %>
       </span>	     	
       </small>
     </span>
