Working on admin dashboard for reports

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -3,6 +3,7 @@
 <h1>Admin Dashboard</h1>
 
 <ul id="admin_links">
+  <li><%= link_to "View Moderated Objects", admin_reports_path %></li>
   <li><%= link_to "Manage Announcements", admin_announcements_path %></li>
   <li><%= link_to "Manage Users", admin_users_path %></li>
   <li><%= link_to "Manage Idioms", admin_idioms_path %></li>
