--- a/app/views/downvotes/create.js.erb
+++ b/app/views/downvotes/create.js.erb
@@ -1,4 +1,13 @@
 $('#<%= @voteable.class.to_s.downcase %>_downvote_<%= @voteable.id %>').
-  addClass('btn-success')
+  addClass('badge-warning')
 $('#<%= @voteable.class.to_s.downcase %>_upvote_<%= @voteable.id %>').
-  removeClass('btn-success')
+  removeClass('badge-success')
+$('#<%= @voteable.class.to_s.downcase %>_score_<%= @voteable.id %>').
+  html('<%= @voteable.total_score %>')  
+<% if @voteable.total_score >= 0 %>
+  $('#<%= @voteable.class.to_s.downcase %>_score_<%= @voteable.id %>').
+    addClass('positive').removeClass('negative')  
+<% else %>
+  $('#<%= @voteable.class.to_s.downcase %>_score_<%= @voteable.id %>').
+    addClass('negative').removeClass('positive')  
+<% end %>  
