Added report abuse buttons and helper method

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,9 +61,9 @@ textarea {
 .span5 {
   border: 2px solid #CEF2E0;
   padding: 2px;
-  margin-right: 3px;
-  min-height: 400px;
-
+  margin: 1px 3px 1px 0; 
+  min-height: 600px;
+  background: #f5fffa;
 }
 
 .span4 {
@@ -71,6 +71,7 @@ textarea {
   padding: 2px;
   margin-left: 2px;
   min-height: 400px;
+  background: #f5faff;
 }
 
 
