--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,10 +2,7 @@
   <%= upvote_button comment, comment.upvoted_by_user?(current_user) %>
   <%= downvote_button comment, comment.downvoted_by_user?(current_user) %> 
   <span class="comment_body"><%= comment.message %></span>
-  <small>
-    <%= link_to "report", [@idiom, comment, comment.reports.new], 
-      method: :post, id: "report_comment_#{comment.id}", remote: true %>
-  </small><br>
+  <small><%= report_button comment %> </small><br>
   <%= score comment %>
   <span id="name">
    posted by <%= link_to comment.user.name, comment.user %> at 
