--- a/app/views/downvotes/create.js.erb
+++ b/app/views/downvotes/create.js.erb
@@ -1,5 +1,5 @@
 $('#<%= @voteable.class.to_s.downcase %>_downvote_<%= @voteable.id %>').
-  addClass('badge-warning')
+  addClass('badge-important')
 $('#<%= @voteable.class.to_s.downcase %>_upvote_<%= @voteable.id %>').
   removeClass('badge-success')
 $('#<%= @voteable.class.to_s.downcase %>_score_<%= @voteable.id %>').
