--- a/app/views/upvotes/create.js.erb
+++ b/app/views/upvotes/create.js.erb
@@ -1,7 +1,7 @@
 $('#<%= @voteable.class.to_s.downcase %>_upvote_<%= @voteable.id %>').
   addClass('badge-success')
 $('#<%= @voteable.class.to_s.downcase %>_downvote_<%= @voteable.id %>').
-  removeClass('badge-warning')
+  removeClass('badge-important')
 $('#<%= @voteable.class.to_s.downcase %>_score_<%= @voteable.id %>').
   html('<%= @voteable.total_score %>')  
 <% if @voteable.total_score >= 0 %>
